--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Headset",
+  "name": "electron-headset",
   "version": "1.5.4",
   "description": "Native Player for OSX",
   "main": "src/index.js",
